# drfr-translation-tool

./: CLAUDE.md  CONTEXT-MAP.md
.github/workflows/: build.yml
apps/desktop/: .gitignore  CONTEXT.md  package-lock.json  package.json
apps/desktop/docs/adr/: 0001-linux-support-via-steam-proton.md  0002-beta-qa-ko-clearing-is-line-level.md
apps/desktop/src/: App.css  App.tsx  Env.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/utmt/: THIRD_PARTY_NOTICE.txt
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: HighlightedText.tsx  Lightbox.tsx  NotionButton.tsx
apps/desktop/src/hooks/: useBetaReports.ts  useBetaReviewMarks.ts  useCreateBetaReport.ts  useQaReviewedLines.ts  useSaveChanges.ts  useTranslationFiles.ts  useTranslationView.ts
apps/desktop/src/store/: store.ts
apps/desktop/src/types/: translation.ts
apps/server/: package-lock.json  package.json  tsconfig.json
apps/server/prisma/: schema.prisma  seed-beta-ch3.ts
apps/server/src/: app.module.ts  env.ts  main.ts
apps/server/src/auth/: auth.controller.ts  auth.module.ts  github-auth.guard.spec.ts  github-auth.guard.ts
apps/server/src/beta-reviews/: beta-file-pairs.ts  beta-reviews.controller.ts  beta-reviews.module.ts  beta-reviews.service.ts
apps/server/src/cache/: cache.constants.ts
apps/server/test/: app.e2e-spec.ts  beta-reviews.e2e-spec.ts  translations.e2e-spec.ts
docs/: prd-beta-qa-review.md
docs/adr/: 0001-flatten-game-path-field.md  0001-two-stage-translation-review.md
docs/agents/: domain.md  issue-tracker.md
docs/issues/: 01-beta-qa-page.md  02-mark-line-and-count.md  03-launch-patched-game.md  04-review-depth-distribution.md
(+90 files in other folders)
