[package]
name = "drfr-translation-tool"
version = "1.0.0"
description = "Outil facilitant la traduction de Deltarune en français."
authors = ["mbourand"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "translation_tool_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip-extract = "0.4.0"
tauri-plugin-log = "2"
tauri-plugin-oauth = "2"
tauri-plugin-os = "2"
# Pinned to 2.3.0 (the version already present in Cargo.lock) to stay on the locked tauri 2.7.0
# stack; newer 2.x crates may require a newer tauri. Adding this plugin also forced tauri-runtime
# back to 2.9.2 in the lock to match tauri-runtime-wry 2.9.3 (2.11.3 declares a trait method wry
# 2.9.3 does not implement). The JS counterpart (package.json) tracks 2.x independently.
tauri-plugin-clipboard-manager = "=2.3.0"

[dev-dependencies]
# Used only by unit tests to synthesize GitHub-style fixture zips. Pinned to the version already in
# Cargo.lock via zip-extract, so it adds no new crate to the build graph.
zip = "4.0"

